feita estilizaçao das paginas de plano

--- a/index.html
+++ b/index.html
@@ -53,29 +53,53 @@
         <section class="box-planos">
             <div class="center">
                 <div class="box-planos-single">
-                    <h2>Lorem ipsum</h2>
-                    <div class="pontos-planos">
-                        <p><i class="fa fa-check-square"></i> Lorem ipsum silor domor </p>
-                        <p><i class="fa fa-check-square"></i> Lorem ipsum silor domor </p>
-                        <p><i class="fa fa-check-square"></i> Lorem ipsum silor domor </p>
-                        <p><i class="fa fa-check-square"></i> Lorem ipsum silor domor </p>
-                    </div><!--pontos-planos -->
-
-                    <div class="pontos-planos">
-                        <p><i class="fa fa-check-square"></i> Lorem ipsum silor domor </p>
-                        <p><i class="fa fa-check-square"></i> Lorem ipsum silor domor </p>
-                        <p><i class="fa fa-check-square"></i> Lorem ipsum silor domor </p>
-                        <p><i class="fa fa-check-square"></i> Lorem ipsum silor domor </p>
-                    </div><!--pontos-planos -->
-
-                    <div class="pontos-planos">
-                        <p><i class="fa fa-check-square"></i> Lorem ipsum silor domor </p>
-                        <p><i class="fa fa-check-square"></i> Lorem ipsum silor domor </p>
-                        <p><i class="fa fa-check-square"></i> Lorem ipsum silor domor </p>
-                        <p><i class="fa fa-check-square"></i> Lorem ipsum silor domor </p>
-                    </div><!--pontos-planos -->
-                    
+                    <div class="box-planos-wraper">
+                        <h2>Lorem ipsum</h2>
+                        <div class="pontos-planos">
+                            <p><i class="fa fa-check-square"></i> Lorem ipsum silor domor </p>
+                            <p><i class="fa fa-check-square"></i> Lorem ipsum silor domor </p>
+                            <p><i class="fa fa-check-square"></i> Lorem ipsum silor domor </p>
+                            <p><i class="fa fa-check-square"></i> Lorem ipsum silor domor </p>
+                        </div><!--pontos-planos -->
+                        <div class="preco">
+                            <h2>R$250,00</h2>
+                        </div><!--preco-->
+                    </div><!--box-planos--wraper-->
                 </div><!--box-planos--single-->
+
+                <div class="box-planos-single">
+                    <div class="box-planos-wraper">
+                        <h2>Lorem ipsum</h2>
+                        <div class="pontos-planos">
+                            <p><i class="fa fa-check-square"></i> Lorem ipsum silor domor </p>
+                            <p><i class="fa fa-check-square"></i> Lorem ipsum silor domor </p>
+                            <p><i class="fa fa-check-square"></i> Lorem ipsum silor domor </p>
+                            <p><i class="fa fa-check-square"></i> Lorem ipsum silor domor </p>
+                        </div><!--pontos-planos -->
+                        <div class="preco">
+                            <h2>R$250,00</h2>
+                        </div><!--preco-->
+                    </div><!--box-planos--wraper-->
+                </div><!--box-planos--single-->
+
+                <div class="box-planos-single">
+                    <div class="box-planos-wraper">
+                        <h2>Lorem ipsum</h2>
+                        <div class="pontos-planos">
+                            <p><i class="fa fa-check-square"></i> Lorem ipsum silor domor </p>
+                            <p><i class="fa fa-check-square"></i> Lorem ipsum silor domor </p>
+                            <p><i class="fa fa-check-square"></i> Lorem ipsum silor domor </p>
+                            <p><i class="fa fa-check-square"></i> Lorem ipsum silor domor </p>
+                        </div><!--pontos-planos -->
+
+                        <div class="preco">
+                            <h2>R$250,00</h2>
+                        </div><!--preco-->
+                    </div><!--box-planos--wraper-->
+                </div><!--box-planos--single-->
+
+              
+
             </div><!--center-->
         </section><!--box-planos-->
     </section><!--planos-->
