--- a/index.html
+++ b/index.html
@@ -103,5 +103,16 @@
             </div><!--center-->
         </section><!--box-planos-->
     </section><!--planos-->
+
+    <section class="parallax">
+        <div class="overlay-parallax">
+            <div  class="center">
+                <h2>Conheça nossa <span style="color: #2692FF;">empresa</span></h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam autem eum ut libero veniam incidunt qui beatae reiciendis aspernatur. Iure totam modi consequatur earum unde. Cum nesciunt similique earum fugit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio harum aut facilis, tenetur earum ducimus odit? Unde architecto, odio ullam, illo itaque voluptates totam minus cupiditate adipisci porro ad in?</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam autem eum ut libero veniam incidunt qui beatae reiciendis aspernatur. Iure totam modi consequatur earum unde. Cum nesciunt similique earum fugit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio harum aut facilis, tenetur earum ducimus odit? Unde architecto, odio ullam, illo itaque voluptates totam minus cupiditate adipisci porro ad in?</p>
+                
+             </div><!--center-->
+        </div><!--overlay-parallax-->
+    </section><!--paralax-->
 </body>
 </html>
